--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -128,18 +128,21 @@
 							<div (click)="getValue($event,'min')"  class="chrome_display">
 							  <input type="time" formControlName="min"  value="{{min}}"  [max]="childForm['value']['jobInfo']['min']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; " ></i>
 							  <small  class="text-danger"  *ngIf="minError" > The start time must be lesser than the end time </small>
+							  <small  class="text-danger"  *ngIf="mintimeError" > Field is required. </small>
 							 </div>
 					</div>
 					<div class="col-lg-6 col-md-6" >
 						<div (click)="getValue($event,'max')" class="chrome_display">
 						  <input type="time" formControlName="max" value="{{max}}"  [min]="childForm['value']['jobInfo']['max']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; " ></i>
 						  <small  class="text-danger"  *ngIf="maxError" > The end time must be greater than the start time </small>
+						  <small  class="text-danger"  *ngIf="maxtimeError" > Field is required. </small>
 						 </div>
 					</div>
 						<div class="col-lg-6 col-md-6">
 						<div (click)="getValue($event,'min')" class="safari_only">
 						  <input type="button"  [value]="this.childForm.value.jobInfo.min | time"  formControlName="min"  [max]="childForm['value']['jobInfo']['min']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; "></i> 
 						  <small class="text-danger"  *ngIf="minError" > The start time must be lesser than the end time </small>
+						  <small  class="text-danger"  *ngIf="mintimeError" > Field is required. </small>
 						 </div>
 						</div>
 						<div class="col-lg-6 col-md-6">
@@ -147,6 +150,7 @@
 						  <input type="button"  [value]="this.childForm.value.jobInfo.max | time"  
 						  formControlName="max" [min]="childForm['value']['jobInfo']['max']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5;"></i>
 						  <small class="text-danger"  *ngIf="maxError" > The end time must be greater than the start time </small>
+						  <small  class="text-danger"  *ngIf="maxtimeError" > Field is required. </small>
 						 </div>
 						</div>
 				</div>	
