loading bar for document view

--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -117,7 +117,7 @@
 																	</a>	
 															</span>
 															<span  style="display: inline-block;" *ngIf="matchingUsers?.application">
-																<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsers?.application ? matchingUsers?.application?.user_resume : onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="btn btn-outline-blue btn-sm" data-toggle="modal" data-target="#resumeModal">
+																<a href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsers?.application ? matchingUsers?.application?.user_resume : onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="btn btn-outline-blue btn-sm" data-toggle="modal" data-target="#resumeModal">
 																		<small><i class="fas fa-file-alt"></i> {{"shared.resume" | translate}} </small>
 																	</a>	
 															</span>
@@ -211,7 +211,7 @@
 															<a *ngIf="!matchingUsers?.application" [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_resume) && onToggleResumeForm(true, (onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
 																<small><i class="fas fa-file-alt"></i>  {{"shared.resume" | translate}}  </small>
 															</a>
-															<a *ngIf="matchingUsers?.application" [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsers?.application ? matchingUsers?.application?.user_resume : onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
+															<a *ngIf="matchingUsers?.application" href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsers?.application ? matchingUsers?.application?.user_resume : onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
 																<small><i class="fas fa-file-alt"></i>  {{"shared.resume" | translate}}  </small>
 															</a>
 															<ng-container *ngIf="!OpenMatchPopups(matchingUsers)">
@@ -277,7 +277,7 @@
 															<a *ngIf="!matchingUsersNew?.application" [class.disabled]="!onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsersNew?.profile?.doc_resume) && onToggleResumeForm(true, (onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
 																<small><i class="fas fa-file-alt"></i>  {{"shared.resume" | translate}}</small>
 															</a>
-															<a *ngIf="matchingUsersNew?.application" [class.disabled]="!onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)" href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsersNew?.application ? matchingUsersNew?.application?.user_resume : onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
+															<a *ngIf="matchingUsersNew?.application" href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsersNew?.application ? matchingUsersNew?.application?.user_resume : onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
 																<small><i class="fas fa-file-alt"></i>  {{"shared.resume" | translate}}</small>
 															</a>
 															<ng-container *ngIf="!OpenMatchPopups(matchingUsersNew)">
