--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -1,6 +1,6 @@
 <!-- Sub Header Section -->
 <section class="sub-header">
-	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container container-big'"  >
+	<div [ngClass]="(screenWidth >= 1500)?'container':'container'"  >
 		<div class="row">
 			<div class="col-lg-5 d-flex align-items-center">
 				<!-- <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
@@ -18,12 +18,118 @@
 		</div>
 	</div>
 </section>
+<section>
+<div class="pt-2 mb-3 mt-1" style="background-color:#EEFCFF;">
+  <div [ngClass]="(screenWidth >= 1500)?'container':'container'">
+  <div class="row">
+  <div class="col-3 d-flex">
+  <h4 style="color:#385EDF;font-weight:bold;" class="text-capitalize">{{userDetails.first_name +' '+ userDetails.last_name}}&nbsp;</h4>
+  <h6 style="color:#48C894;font-weight:bold;" class="mt-2 text-capitalize"> - {{userDetails.current_employer_role}}</h6>
+  </div>
+  <div class="col-3">
+  <ul>
+  <li class="text-capitalize font-weight-bold" style="color:#6C757D;font-size:15px;">Location :  {{userDetails?.city+', '+userDetails?.state+', '+userDetails?.country}}</li>
+  </ul>
+  </div>
+  <div class="col-3">
+  <ul>
+  <li class="text-capitalize font-weight-bold" style="color:#6C757D;font-size:15px;">{{userDetails?.current_employer}}</li>
+  </ul>
+  </div>
+  <div class="col-3 mt-2">
+   <app-contact-card
+	  [userInfo]="userInfo"
+	  [isEdit]="false"
+	  [isUploadShow]="true"
+	  [isContactIcon]="false"
+	  [isResume]="true"
+	  [isMatchesShow]="true"
+	  [isMultipleMatches]="isMultipleMatches"
+	  [isMatchesView]="false">
+	</app-contact-card>
+  </div>
+  </div>
+  </div>
+</div>
+</section>
   <!-- //Sub Header Section -->
-<section class="my-5">
-	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container container-big'"   >
+<section class="my-2">
+	<div [ngClass]="(screenWidth >= 1500)?'container':'container'">
+	   <div id="cardsliders" class="row">
+	   
+	   <div class="col-10" >
+			<div class="card profile-card">
+			<div class="row">
+			   <div class="col-1"> 
+			   <i class='fas fa-briefcase bcstyle mt-2 ml-2' ></i>
+			   </div>
+				<div class="d-flex col-11">
+					<div class="col-lg-8 col-md-12 job-cards">
+						<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id ,location_id: matchingJob?.jobs?.job_location?.id }"  class="text-capitalize" href="javascript:;">
+							<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
+						</a>
+						<h6 class="text-capitalize">
+							{{matchingJob?.jobs?.company_name }}
+						</h6>
+						<h6 class="text-capitalize">
+		
+							<ng-container *ngFor="let item of matchingJob?.jobs?.job_locations;index as i" >
+								<span>
+								{{item?.city ? item?.city+', '  : ''}}
+								<span class="text-uppercase" *ngIf="!isMultipleMatches">
+								  {{item?.country ? item?.country : ''}}
+								</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+								  {{item?.countryshort ? item?.countryshort : ''}}
+								</span><br>
+								</span>
+								</ng-container>
+						</h6>
+
+					</div>
+					<div class="col-lg-4 col-md-12 change-lay ml-5"  [ngClass]="(isMultipleMatches === true)?'isMatchesView':''">
+						<a class="btn btn-outline-blue btn-sm text-right" href="javascript:;" (click)="onToggleJDModal(true,matchingJob?.jobs?.description)">	
+						<i class="fas fa-calendar-alt"></i> {{"shared.description" | translate}}</a>
+						
+						<div class="media mt-2" >
+							<div class="media-body">
+							
+							 <div style="position: initial !important;margin-top:0px !important;"class="matchs-info " [ngClass]="isMultipleMatches ? 'd-none' : ''" >
+							<button (click)="onShowMatches($event)" id="matchBtnVal"  [ngClass]="matchedElement ? 'btn-fltr-active' : ''"  class="matchBtn btn-sm btn btn-fltr btn-light"><i class='fas fa-check' style='color:#3AC724;font-size:6px;border:2px solid;border-radius:40%;padding:2px 2px 0px 1px;'></i>{{"shared.matches" | translate}} </button>
+							<button (click)="onShowMissing($event)" id="missBtnVal"  [ngClass]="missingElement ? 'btn-fltr-active' : ''"  class="missBtn btn-sm btn btn-fltr btn-light"><i class="fa fa-times text-danger" style='color:#DA0000;font-size:7px;border:2px solid;border-radius:40%;padding:2px 1.5px 0px 2px;'></i>  {{"shared.missing" | translate}} </button>
+							
+						</div>
+								<!--<h6 *ngIf="matchingJob?.jobs?.salary_type == 0" [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / hr'}}</h6>
+								<h6 *ngIf="matchingJob?.jobs?.salary_type == 1" [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / Annual '}}</h6>
+								<h6 *ngIf="matchingJob?.jobs?.salary_type == 2" [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / month'}}</h6>-->
+								<!--<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 9rem;" *ngIf="matchingJob?.jobs?.negotiable ==true && !isMultipleMatches"> {{"shared.negotiable" | translate}}</a>
+								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 4.7rem;left: 0rem;" *ngIf="isMultipleMatches "> {{"shared.negotiable" | translate}}</a>-->
+								<!--<h6 class="text-capitalize job-cardh6"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  >{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.remote)}} </h6>
+								<h6 class="text-capitalize job-cardh6"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  > {{utilsHelperService.onGetRemoteOption(matchingJob?.jobs?.remote_option)}} </h6>-->
+								
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
+			</div>
+			
+		</div>
+		<div class="col-2 d-flex">
+		<!-- <button type="button" class="card profile-card" style="border:1px solid #11B771;color:#11B771;"></button> -->
+		<div class="scorecard" [ngClass]="{'score-txt-green': matchingJob?.score >= 5, 'score-txt-orange': (matchingJob?.score < 5 && matchingJob?.score > 0), 'score-txt-red': (matchingJob?.score == 0)}">
+		{{"shared.score" | translate}} <span style="font-size:20px;">{{matchingJob?.score ? matchingJob?.score :0}}/10</span>
+	    </div>
+		<div class="ml-4">
+		<a *ngIf="page != 1 " (click)="onChangeUsers('prev')"><i style="color:#CCCCCC;font-size:30px;" class="fas fa-arrow-circle-left"></i></a>
+		<h5 style="color:#6C757D;font-weight:bold;">{{page}}/{{matchingJobMeta?.count}}</h5>
+		<a *ngIf="page != matchingJobMeta?.count " (click)="onChangeUsers('next')" ><i style="color:#CCCCCC;font-size:30px;" class="fas fa-arrow-circle-right"></i></a>	
+		</div>
+		
+		</div>
+	   </div>
 		<div class="row" *ngIf="loading===true">
 			<div [ngClass]="(isMultipleMatches === true)?'col-lg-4 col-md-4':'col-lg-6 col-md-6 matches-8'">
-				<div class="row">
+				<!--<div class="row">
 					<div class="col-lg-12">
 						<app-contact-card
 						  [userInfo]="userInfo"
@@ -36,11 +142,11 @@
 						  [isMatchesView]="false">
 						</app-contact-card>
 					</div>
-				</div>
+				</div>-->
 				<app-shared-user-profile-job-matches [isMultipleMatches]="isMultipleMatches" [fieldsExclude]="{clients_worked: true, job_role: true, willing_to_relocate: true}" [userInfo]="userInfo" [postedJobsDetails]="matchingJob?.jobs"></app-shared-user-profile-job-matches>
 		  </div>
 		<div class="top-pad" [ngClass]="(isMultipleMatches === true)?'col-lg-8 col-md-8':'col-lg-6 col-md-6 matches-8'">
-			<div id="carouselProfile" class="carousel slide job-info-container" data-interval="false" data-ride="carousel">
+			<div id="carouselProfile" class="slide job-info-container">
 				<div class="carousel-inner">
 					<!--Profile1-->
 					<div class="carousel-item active">
@@ -48,7 +154,7 @@
 							<div *ngIf="!utilsHelperService.isEmptyObj(matchingJob?.jobs)" [ngClass]="(isMultipleMatches === true)?'col-lg-6':'col-lg-12'" >
 								<div class="row info-box">
 								<!--Header Sec-->
-									<div class="col-lg-12" >
+									<!--<div class="col-lg-12" >
 										<div class="card profile-card">
 											<div class="d-flex">
 												<div class="col-lg-8 col-md-12 job-cards">
@@ -57,7 +163,7 @@
 													</a>
 													<h6 class="mb-0 text-capitalize">
 														<!-- {{matchingJob?.jobs?.job_location?.city +', ' +matchingJob?.jobs?.job_location?.state+', ' +matchingJob?.jobs?.job_location?.country}} -->
-														<ng-container *ngFor="let item of matchingJob?.jobs?.job_locations;index as i" >
+														<!--<ng-container *ngFor="let item of matchingJob?.jobs?.job_locations;index as i" >
 															<span *ngIf="i < 2">
 															{{item?.city ? item?.city+', '  : ''}}
 															{{item?.state ? item?.state+', '  : ''}}
@@ -82,7 +188,7 @@
 														<!-- <button (click)="onReset()" class="btn btn-sm btn-light ml-1">
 															<i class="fas fa-sync"></i>
 														</button> -->
-													</div>
+													<!--</div>
 												</div>
 												<div class="col-lg-4 col-md-12 change-lay"  [ngClass]="(isMultipleMatches === true)?'isMatchesView':''">
 													<a class="btn btn-outline-blue btn-sm text-right" href="javascript:;" (click)="onToggleJDModal(true,matchingJob?.jobs?.description)">	
@@ -98,19 +204,19 @@
 															<h6 class="text-capitalize job-cardh6"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  >{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.remote)}} </h6>
 															<h6 class="text-capitalize job-cardh6"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  > {{utilsHelperService.onGetRemoteOption(matchingJob?.jobs?.remote_option)}} </h6>
 															<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.willing_to_relocate)}} </h6> -->
-														</div>
+														<!--</div>
 													</div>
 												</div>
 											</div>
 										</div>
 										
-									</div>
+									</div>-->
 									
 									<!--Body Sec-->
 									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-0' : 'mt-0'">
-										<div class="score mt-5" [ngClass]="{'score-txt-green': matchingJob?.score >= 5, 'score-txt-orange': (matchingJob?.score < 5 && matchingJob?.score > 0), 'score-txt-red': (matchingJob?.score == 0)}">
+										<!--<div class="score mt-5" [ngClass]="{'score-txt-green': matchingJob?.score >= 5, 'score-txt-orange': (matchingJob?.score < 5 && matchingJob?.score > 0), 'score-txt-red': (matchingJob?.score == 0)}">
 											{{"shared.score" | translate}} <span>{{matchingJob?.score ? matchingJob?.score :0}}/10</span>
-										</div>
+										</div>-->
 										<app-shared-job-profile-matches [jobInfo]="matchingJob?.jobs"  [isMultipleMatches]="isMultipleMatches" 
 										[missingElement]="missingElement" [matchedElement]="matchedElement"
 										[moreElement]="moreElement" [userInfo]="userInfo">
@@ -209,7 +315,7 @@
 				<!-- <a style="top:-45px;position: absolute;right: 85px;" (click)="!isMultipleMatches && onViewOtherMatches()" href="javascript:;" class="btn btn-sm btn-primary mr-3">
 					<small><i class="fab fa-buffer"></i> View All Jobs</small>
 				</a> -->
-				<div style="top:-35px;position: absolute;left: 10px;" >					
+				<!--<div style="top:-35px;position: absolute;left: 10px;" >					
 						<span class="font-weight-bold" style="line-height: 28px;">  {{"shared.youHave" | translate}} {{matchingJobMeta?.count}} {{"shared.matches" | translate}}
 						<button type="button" *ngIf="!isMultipleMatches && matchingJobMeta?.count !== '1'" (click)="!isMultipleMatches && onViewOtherMatches()" class="btn d-none-content btn-outline-blue btn-sm ml-2 " style=" z-index:99;width: 70px;">{{"shared.viewAll" | translate}}</button>
 						 </span>	
@@ -238,7 +344,7 @@
 						<span class="carousel-control-next-icon" aria-hidden="true"></span>
 						<span class="sr-only">Next</span>
 					</a>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
