--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -1,4 +1,4 @@
-<div class="card job-card">
+<div class="card job-card" *ngIf="!matchesModels">
   <div class="card-body">
     <div class="row">
       <div [ngClass]="(isMultipleMatches === true)?'col-lg-12 col-md-12':'col-lg-9 col-md-9'">
@@ -275,7 +275,31 @@
 		</div>
   </div>
 </div>
+<div *ngIf="matchesModels">
+        <span class=" profile-btn" *ngIf="!isMultipleMatches" style="display: inline-block;">
+          <a *ngIf="!isUploadShow || selectedCover?.file"
+          [class.disabled]="!selectedCover?.file"
+          (click)="selectedCover?.file && onToggleCoverForm(true, (selectedCover?.file))" class="btn btn-smss btn-outline-orange  btn-sm" href="javascript:;">
+            <i class="fas fa-envelope-open-text"></i>  {{"shared.coverLetter" | translate }}
+          </a>
+		  <a *ngIf="isUploadShow && !selectedCover?.file" 
+          (click)="openCoverselect(true)" class="btn btn-smss btn-outline-orange  btn-sm" href="javascript:;">
+            <i class="fas fa-envelope-open-text"></i>  {{"shared.addCover" | translate }}
+          </a>
+        </span>
+        <span *ngIf="isResume" class="profile-btn"  style="display: inline-block;">
+          <a *ngIf="!isUploadShowResume || selectedResume?.file" style="margin-top: .25rem;"
+          [class.disabled]="!selectedResume?.file"
+          (click)="selectedResume?.file && onToggleResumeForm(true, (selectedResume?.file))" class="btn btn-smss btn-outline-blue btn-sm" href="javascript:;">
+            <i class="fas fa-envelope-open-text"></i> {{"shared.resume" | translate }}
+          </a> <a *ngIf="isUploadShowResume && !selectedResume?.file" style="margin-top: .25rem;"
+         (click)="openResumselect(true)"  id="addResumeFile" 
+           class="btn  btn-smss btn-outline-blue btn-sm" href="javascript:;">
+            <i class="fas fa-envelope-open-text"></i>  {{"shared.addResume" | translate }}
+          </a>
+        </span>
 
+</div>
 <app-cover-select
 [togglecoverSelectModal]="togglecoverSelectModal"
 *ngIf="togglecoverSelectModal"
