--- a/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
+++ b/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
@@ -21,6 +21,17 @@
 			</div>
 		</div>
 		<div class="row mb-5">
+		    
+			<ng-container *ngIf="showMatches!==true">		
+				<div class="col-lg-4 col-md-6">
+					<div class="noselect chartTitle mb-4">
+						{{"shared.totalMatches" | translate}}
+					</div>
+					<div class="donut"><div class="hole">
+					<label class="zerolabel">0</label>
+					</div></div>
+				</div>
+			</ng-container>
 			<ng-container *ngIf="showMatches">		
 				<div class="col-lg-4 col-md-6 matches-8" *ngIf="MatchesTotal.length<8">
 					<div class="noselect chartTitle mb-4">
@@ -90,6 +101,16 @@
 					<div class="noselect chart-center-label" *ngIf="MatchesTotal.length>=83"  style="left:66%;">{{totalMatches}}</div>
 				</div>
 			</ng-container >
+			<ng-container *ngIf="showApplied!==true">		
+				<div class="col-lg-4 col-md-6 ">
+					<div class="noselect chartTitle mb-4">
+						{{"nav.appliedJobs" | translate}} 
+					</div>
+					<div class="donut"><div class="hole">
+					<label class="zerolabel">0</label>
+					</div></div>
+				</div>
+			</ng-container>
 			<ng-container *ngIf="showApplied">		
 				<div class="col-lg-4 col-md-6 matches-8" *ngIf="AppliedTotal.length<8">
 					<div class="noselect chartTitle mb-4">
@@ -155,7 +176,16 @@
 					<div class="noselect chart-center-label" *ngIf="AppliedTotal.length>=83"  style="left:66%;">{{totalApplied}}</div>
 				</div>
 			</ng-container >
-		
+			<ng-container *ngIf="showAvailiability!==true">		
+				<div class="col-lg-4 col-md-6 ">
+					<div class="noselect chartTitle mb-4">
+						{{"shared.byAvailability" | translate}} 
+					</div>
+					<div class="donut"><div class="hole">
+					<label class="zerolabel">0</label>
+					</div></div>
+				</div>
+			</ng-container>
 			<div class="col-lg-4 col-md-6 matches-8" *ngIf="showAvailiability" style="max-height: 230px;">				
 				<div class="noselect chartTitle mb-4">
 					{{"shared.byAvailability" | translate}} 
@@ -171,6 +201,16 @@
 				  </canvas>
 				<div class="noselect chart-center-label"  style="left:62%;">{{totalAvailability}}</div>
 			</div>
+			<ng-container *ngIf="showType!==true">		
+				<div class="col-lg-4 col-md-6 ">
+					<div class="noselect chartTitle mb-4">
+						{{"shared.byJobType" | translate}} 
+					</div>
+					<div class="donut"><div class="hole">
+					<label class="zerolabel">0</label>
+					</div></div>
+				</div>
+			</ng-container>
 			<div class="col-lg-4 col-md-6 matches-8" *ngIf="showType" style="max-height: 230px;">					
 				<div class="noselect chartTitle mb-4">
 					{{"shared.byJobType" | translate}} 
@@ -186,6 +226,16 @@
 				  </canvas>
 				<div class="noselect chart-center-label" style="left:62%;">{{totalType}}</div>
 			</div>
+			<ng-container *ngIf="showVisa!==true">		
+				<div class="col-lg-4 col-md-6 ">
+					<div class="noselect chartTitle mb-4">
+						{{"shared.byVisa" | translate}} 
+					</div>
+					<div class="donut"><div class="hole">
+					<label class="zerolabel">0</label>
+					</div></div>
+				</div>
+			</ng-container>
 			<ng-container *ngIf="showVisa">		
 				<div class="col-lg-4 col-md-6 matches-8" *ngIf="AppliedVisa.length<8">
 					<div class="noselect chartTitle mb-4">
