Employer matches chnages

--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -27,13 +27,13 @@
   <h6 style="color:#48C894;font-weight:bold;" class="mt-2 text-capitalize"> - {{userDetails.current_employer_role}}</h6>
   </div>
   <div class="col-3">
-  <ul>
-  <li class="text-capitalize font-weight-bold" style="color:#6C757D;font-size:15px;">Location :  {{userDetails?.city+', '+userDetails?.state+', '+userDetails?.country}}</li>
+  <ul class="mb-1">
+  <li class="text-capitalize bluecardtext">Location :  {{userDetails?.city+', '+userDetails?.state+', '+userDetails?.country}}</li>
   </ul>
   </div>
   <div class="col-3">
   <ul>
-  <li class="text-capitalize font-weight-bold" style="color:#6C757D;font-size:15px;">{{userDetails?.current_employer}}</li>
+  <li class="text-capitalize bluecardtext">{{userDetails?.current_employer}}</li>
   </ul>
   </div>
   <div class="col-3 mt-2">
