--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
@@ -33,3 +33,9 @@
 .a-class{
 	color: #385edf;
 }
+.location-role{
+	font-weight: 700;
+    font-size: 14px;
+    color: #9AA0A6;
+    margin-top:-0.4rem;
+}
