--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -1,5 +1,5 @@
 <section class="sub-header">
-	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container container-big'"   >
+	<div [ngClass]="(screenWidth >= 1500)?'container':'container'"   >
 		<div class="row">
 			<div class="col-lg-5 d-flex align-items-center">
 				<!-- <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
@@ -15,13 +15,120 @@
 		</div>
 	</div>
 </section>
+<section>
+<div class="pt-2 mb-3 mt-1" style="background-color:#EEFCFF;">
+  <div [ngClass]="(screenWidth >= 1500)?'container':'container'">
+  <div class="row">
+  <div class="col-3 d-flex">
+  
+    <a [routerLink]="['/employer/job-detail-view/details']"  [queryParams]="{id: postedJobsDetails?.id}" href="javascript:;">
+        <h4 style="color:#385EDF;font-weight:bold;" class="text-capitalize">{{postedJobsDetails?.title}}&nbsp;</h4>
+	</a>
+	<h6 class="text-capitalize mt-2">{{postedJobsDetails?.company?.company}}</h6>
+  </div>
+  <div class="col-3">
+  <ul class="mb-1">
+  <li class="text-capitalize bluecardtext">
+	Location:
+	<ng-container *ngFor="let item of postedJobsDetails?.job_locations" >
+	{{item?.city ? item?.city+'-'+item?.countryshort: ''}}
+	</ng-container>
+	</li>
+  </ul>
+  </div>
+  <div class="col-3">
+  <ul>
+    <li class="text-capitalize bluecardtext">
+	<span *ngIf="postedJobsDetails?.salary_type == 0">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / hr'}}</span>
+		<span *ngIf="postedJobsDetails?.salary_type == 1">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual '}}</span>
+		<span *ngIf="postedJobsDetails?.salary_type == 2">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / month'}}</span>
+	</li>
+  </ul>
+  </div>
+  <div class="col-3">
+   <a (click)="onToggleJDModal(true)" class="btn btn-outline-blue btn-sm text-right mr-2" href="javascript:;" style="display:inline-block; float:right;">
+		<i class="fas fa-calendar-alt"></i> {{"shared.description" | translate }}
+	</a>
+  </div>
+  </div>
+  </div>
+</div>
+</section>
 
 <!-- //Sub Header Section -->
-<section class="my-5">
-	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container container-big'"   >
+<section class="my-2">
+	<div [ngClass]="(screenWidth >= 1500)?'container':'container'"   >
+	<div id="cardsliders" class="row"> 
+	<div class="col-10" *ngIf="!isMultipleMatches">
+			<div class="card job-card" style="min-height:100px;">
+				<div class="card-body">
+					<div class="row d-flex">
+						<div class="col-1 media">
+						<img class="mt-1 ml-1" [src]="matchingUsers?.profile?.photo ? userprofilepath+matchingUsers?.profile?.photo : 'assets/images/user-img-icon.jpg'">
+							
+						</div>
+						<div class="col-11 d-flex">
+						   <div class="col-7">
+						    <a [routerLink]="['/employer/candidate-profile']" [queryParams]="{location_id: matchingUsers?.profile?.job_location?.id,id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">	
+							<h5 class="text-capitalize">
+							<span>{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
+							  + (matchingUsers?.profile?.last_name ? matchingUsers?.profile?.last_name : '')}}</span>
+							<small *ngIf="matchingUsers?.profile?.job_role"> -
+							  {{matchingUsers?.profile?.job_role}}</small>
+						     </h5>
+						    </a>
+							<h6 class="text-capitalize location-role">		 
+							{{matchingUsers?.profile?.city ? matchingUsers?.profile?.city+', '  : ''}}
+							{{matchingUsers?.profile?.state ? matchingUsers?.profile?.state+', '  : ''}}{{matchingUsers?.profile?.country ? matchingUsers?.profile?.country : ''}}
+						</h6>
+						<h6 class="text-capitalize location-role" >{{matchingUsers?.profile?.current_employer}}</h6>
+						</div>
+						<div class="col-5">
+							<div style="float:right;">													
+								<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_cover)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_cover) && onToggleCoverForm(true, (onGetFilteredValue(matchingUsers?.profile?.doc_cover)))" class="btn btn-outline-orange btn-sm" data-toggle="modal" data-target="#resumeModal">
+										<small id="coverletter" style="display:inline-block;"><i class="fas fa-envelope-open-text"></i> {{"shared.coverLetter" | translate}}</small>
+									</a>	
+							
+							<span class="ml-2" *ngIf="!matchingUsers?.application">
+								<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_resume) && onToggleResumeForm(true, (onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="btn btn-outline-blue btn-sm" data-toggle="modal" data-target="#resumeModal">
+										<small id="resumeletter" style="display:inline-block;"><i class="fas fa-envelope-open-text"></i> {{"shared.resume" | translate}} </small>
+									</a>	
+							</span>
+							<span class="ml-2" *ngIf="matchingUsers?.application">
+								<a href="javascript:;" (click)="onToggleResumeForm(true, (matchingUsers?.application ? matchingUsers?.application?.user_resume : onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="btn btn-outline-blue btn-sm" data-toggle="modal" data-target="#resumeModal">
+										<small><i class="fas fa-envelope-open-text"></i> {{"shared.resume" | translate}} </small>
+									</a>	
+							</span>
+							</div><br /><br />
+				            <div style="float:right;">				
+							<button (click)="onShowMatches($event)" id="matchBtnVal" [ngClass]="matchedElement ? 'btn-fltr-active' : ''"  class="matchBtn btn-sm btn btn-fltr btn-light "><i class='fas fa-check' style='color:#3AC724;font-size:6px;border:2px solid;border-radius:40%;padding:2px 2px 0px 1px;'></i>{{"shared.matches" | translate}} </button>
+							<button (click)="onShowMissing($event)" id="missBtnVal"  [ngClass]="missingElement ? 'btn-fltr-active' : ''"  class="missBtn ml-2 btn-sm btn btn-fltr btn-light "><i class="fa fa-times text-danger" style='color:#DA0000;font-size:7px;border:2px solid;border-radius:40%;padding:2px 1.5px 0px 2px;'></i> {{"shared.missing" | translate}}  </button>
+							<button (click)="onShowMore($event)" id="moreBtnVal"  [ngClass]="moreElement ? 'btn-fltr-active' : ''"  class="moreBtn  btn-sm ml-2 btn btn-fltr btn-light "><i class="fa fa-info" style='color:#0FBEF4;font-size:7px;border:2px solid;border-radius:40%;padding:2px 3px 0px 3px;'></i> {{"shared.moreSkills" | translate}} </button>
+			                </div>
+		                 </div>
+						</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+			
+		<div class="col-2 d-flex">
+		<div class="scorecard" [ngClass]="{'score-txt-green': matchingUsers?.score >= 5, 'score-txt-orange': (matchingUsers?.score < 5 && matchingUsers?.score > 0), 'score-txt-red': (matchingUsers?.score == 0)}">
+		{{"shared.score" | translate}} <span style="font-size:20px;">{{matchingUsers?.score ? matchingUsers?.score :0}}/10</span>
+	    </div>	
+		<div class="ml-4">
+		<a *ngIf="page != 1 " (click)="onChangeUsers('prev')"><i style="color:#CCCCCC;font-size:30px;" class="fas fa-arrow-circle-left"></i></a>
+		<h5 style="color:#6C757D;font-weight:bold;">{{page}}/{{matchingUsersMeta?.count}}</h5>
+		<a *ngIf="page != matchingUsersMeta?.count " (click)="onChangeUsers('next')" ><i style="color:#CCCCCC;font-size:30px;" class="fas fa-arrow-circle-right"></i></a>	
+		</div>
+		
+		</div>
+		</div>
+
 		<div class="row" *ngIf="loading === true">
 			<div  class="top-pad top-pads" [ngClass]="(isMultipleMatches === true)?'col-lg-4 col-md-4 matches-8':'col-lg-6 col-md-6 matches-8'">
-				<div class="row">
+				<!--<div class="row">
 					<div class="col-lg-12">
 						<div class="card profile-card border p-2">
 							<div class="d-flex">
@@ -61,7 +168,7 @@
 									  (click)="onViewOtherMatches()"
 										 href="javascript:;" style="display:inline-block;">
 										<!-- {{"dashboard.matches" | translate}} -->
-										<i class="fas fa-tasks"></i>
+										<!--<i class="fas fa-tasks"></i>
 										{{"tabs.matches" | translate }}
 									</a>
 									<div class="media "  [ngClass]="(isMultipleMatches === true)?'moreTxt':'mt-2'">
@@ -72,13 +179,13 @@
 											<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.remote)}} </h6>
 											<h6 class="text-capitalize job-cardh6" >{{utilsHelperService.onGetRemoteOption(postedJobsDetails?.remote_option)}}</h6>
 											<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}} </h6> -->
-										</div>
+										<!--</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<app-shared-job-profile [jobInfo]="postedJobsDetails" [isShownRequiements]="true"  [isMultipleMatches]="isMultipleMatches"[isHideData]="isHideData" 
 					[fieldsExclude]="{salary: false, visa_sponsorship: false, end_to_end_implementation: true}">
 				</app-shared-job-profile>
@@ -91,7 +198,7 @@
 							<div class="row">
 								<div *ngIf="!utilsHelperService.isEmptyObj(matchingUsers?.profile)" [ngClass]="(isMultipleMatches === true)?'col-lg-6 col-md-6 matches-8':'col-lg-12 col-md-12 matches-8'" >
 									<div class="info-box">
-										<div class="col-lg-12" *ngIf="!isMultipleMatches">
+										<!--<div class="col-lg-12" *ngIf="!isMultipleMatches">
 											<div class="card job-card" style="height:120px;">
 												<div class="card-body">
 													<div class="row d-flex">
@@ -182,8 +289,8 @@
 												<!-- <button (click)="onReset()" class="btn btn-sm btn-light ml-1" style="margin-top: -12px;">
 												<i class="fas fa-sync"></i>
 												</button> -->
-											</div>
-										</div>
+											<!--</div>
+										</div>-->
 										<div class="col-lg-12" *ngIf="isMultipleMatches">
 											<div class="card profile-card">
 												<div class="d-flex">
@@ -325,7 +432,7 @@
 						<!--//Profile1-->
 					</div>
 					<!--PrevNext-->
-					<div class="matchCount" style="top:-45px;">{{page}}/{{matchingUsersMeta?.count}}</div>
+					<!--<div class="matchCount" style="top:-45px;">{{page}}/{{matchingUsersMeta?.count}}</div>
 					  <div *ngIf="!isMultipleMatches">
 						  <a  *ngIf="page != 1 " (click)="onChangeUsers('prev')" class="carousel-control-prev" href="#carouselProfile" role="button"
 							data-slide="prev" style="top:-45px;">
@@ -337,7 +444,7 @@
 							<span class="carousel-control-next-icon" aria-hidden="true"></span>
 							<span class="sr-only">Next</span>
 						  </a>
-					</div>
+					</div>-->
 					<div *ngIf="isMultipleMatches">
 						  <a  *ngIf="page != 1 " (click)="onChangeUser('prev')" class="carousel-control-prev" href="#carouselProfile" role="button"
 							data-slide="prev" style="top:-45px;">
