--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -1,7 +1,7 @@
 <div class="row  info-box">
 	<div class="col-lg-12">
 		<div class="accordion mt-3 ">
-			<div class="pj-titler "  *ngIf="required">
+			<div class="pj-title "  *ngIf="required">
 				<h6 class="mb-0" >
 					{{"jobs.requiredSkils" | translate }} 
 				 </h6>
@@ -341,7 +341,7 @@
 				</div>
 			</div>
 		<div class="accordion" *ngIf="desired">
-			<div class="pj-titler m-b-1" >
+			<div class="pj-title m-b-1" >
 				<h6 class="mb-0" >
 					{{"jobs.desired" | translate }}
 				 </h6>
@@ -683,7 +683,7 @@
 			</div>
 		</div>
 		<div class="accordion" *ngIf="nice">
-			<div class="pj-titler m-b-1"  >
+			<div class="pj-title m-b-1"  >
 				<h6 class="mb-0" >
 					{{"jobs.niceToHave" | translate }}
 				 </h6>
@@ -1025,7 +1025,7 @@
 			</div>
 		</div>
 		<div class="accordion"  *ngIf="optional">
-			<div class="pj-titler m-b-1"  >
+			<div class="pj-title m-b-1"  >
 				<h6 class="mb-0" >
 					{{"jobs.otherPreferences" | translate }}
 				 </h6>
@@ -1341,7 +1341,7 @@
 		</div>
 		
 		<div class="accordion" *ngIf="IsShown && !isHideData">
-			<div class="pj-titler m-b-1" >
+			<div class="pj-title m-b-1" >
 				<h6 class="mb-0" >
 					{{"jobs.perksBenfits" | translate}}
 				 </h6>
