--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -519,7 +519,7 @@
 				</div>
 			</div>
 			<div class="accordion mt-3 " style="margin-top: 1.6rem !important;" *ngIf="desired">
-			<div class="pj-titless m-b-1"  [ngClass]="(isMultipleMatches === true)?'padd-5':'padd-10'" ><h6  class="mb-0"></h6></div>
+			<div class="pj-titless"  [ngClass]="(isMultipleMatches === true)?'padd-5':'padd-10'" ><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='1'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -1024,7 +1024,7 @@
 					</div>
 				</div>
 			</div><div class="accordion mt-0 " style="margin-top: -0.3rem !important;" *ngIf="nice">
-				<div class="pj-titles m-b-1"  style="padding: 10px 0px;"><h6  class="mb-0"></h6></div>
+				<div class="pj-titles"  style="padding: 10px 0px;"><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='2'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -1530,7 +1530,7 @@
 				</div>
 			</div>
 			<div class="accordion mt-2" *ngIf="optional">
-				<div class="pj-titles m-b-1"  style="padding: 10px 0px;" ><h6  class="mb-0"></h6></div>
+				<div class="pj-titles"  style="padding: 10px 0px;" ><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience==''">
 					<ul class="list-group">
 						<li class="list-group-item">
