--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -10,7 +10,7 @@
 		 <li class="breadcrumb-item">
 					<a (click)="onRedirectBack();"  ><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a>
 				 </li>
-          <li class="breadcrumb-item active" aria-current="page">{{"nav.appliedJobs" | translate}}</li>
+          <li class="breadcrumb-item active" aria-current="page">{{"shared.viewjobs" | translate}}</li>
         </ol>
       </div>
       <div class="col-lg-7 clearfix">
