--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
@@ -3,8 +3,8 @@
   border: 1px solid #ff8645;
 }
 .score-txt-green {
-  color: #35ad97;
-  border: 1px solid #35ad97;
+  color: #11b771;
+  border: 1px solid #11b771;
 }
 .score-txt-red {
   color: #dc3545;
