--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -288,11 +288,11 @@
           </a>
         </span>
         <span *ngIf="isResume" class="profile-btn"  style="display: inline-block;">
-          <a *ngIf="!isUploadShowResume || selectedResume?.file" style="margin-top: .25rem;font-size:12px;"
+          <a *ngIf="!isUploadShowResume || selectedResume?.file" style="font-size:12px;"
           [class.disabled]="!selectedResume?.file"
           (click)="selectedResume?.file && onToggleResumeForm(true, (selectedResume?.file))" class="btn btn-smss btn-outline-blue btn-sm" href="javascript:;">
             <i class="fas fa-envelope-open-text"></i> {{"shared.resume" | translate }}
-          </a> <a *ngIf="isUploadShowResume && !selectedResume?.file" style="margin-top: .25rem;font-size:12px;"
+          </a> <a *ngIf="isUploadShowResume && !selectedResume?.file" style="font-size:12px;"
          (click)="openResumselect(true)"  id="addResumeFile" 
            class="btn  btn-smss btn-outline-blue btn-sm" href="javascript:;">
             <i class="fas fa-envelope-open-text"></i>  {{"shared.addResume" | translate }}
