--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -276,7 +276,7 @@
   </div>
 </div>
 <div *ngIf="matchesModels">
-        <span class=" profile-btn" *ngIf="!isMultipleMatches" style="display: inline-block;">
+        <span class=" profile-btn" style="display: inline-block;">
           <a *ngIf="!isUploadShow || selectedCover?.file"
           [class.disabled]="!selectedCover?.file"
           (click)="selectedCover?.file && onToggleCoverForm(true, (selectedCover?.file))" class="btn btn-smss btn-outline-orange  btn-sm" href="javascript:;" style="font-size:12px;">
