--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1628,6 +1628,7 @@ a:hover {
     padding: .15rem 0;
     background-color: transparent;
     border: unset;
+	cursor:pointer;
     /* border-bottom: 1px solid rgba(0,0,0,.15); */
     border-radius: 0;
     margin-bottom: 10px;
@@ -1636,8 +1637,8 @@ a:hover {
     min-height: 26px;
     font-weight: 700;
     text-overflow: ellipsis;
-    overflow: hidden;
-    min-width: 350px;
+    /*overflow: hidden;*/
+    max-width: 100%;
     white-space: nowrap;
 }
 .sap-badge {
