--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
@@ -12,14 +12,14 @@
     background-color: #ffffff;
     border-color: #ffffff;
     box-shadow: 2px 2px 2px 1px #dfdfdf;
-    margin-right: 10px;
+    margin-left: 10px;
     margin-bottom: 14px;
     padding: 4px 8px;
     font-size: 12px;
 }
 .btn-fltr:hover {
 
-    box-shadow: 3px 3px 3px 2px #4caf5057;
+    /*box-shadow: 3px 3px 3px 2px #4caf5057;*/
     color: #000;
     background-color: #e2e6ea;
     border-color: #dae0e5;
@@ -27,13 +27,13 @@
 .btn-fltr-active {
     background-color: #e2e6ea;
     border-color: #dae0e5;
-    box-shadow: 3px 3px 3px 2px #4caf5057;
+   /* box-shadow: 3px 3px 3px 2px #4caf5057;*/
     color: #000;
 }
 .job-cards h6 {
     font-weight: 700;
-    font-size: 13px;
-    color: #465666;
+    font-size: 14px;
+    color: #6C757D;
     margin-bottom: -0.1px;
 }
 .isMatchesView{
